<resources>
    <string name="app_name">Ball is Life</string>
    <string name="title_activity_thread">ThreadActivity</string>
    <string name="title_activity_settings">Settings</string>

    <!-- General -->
    <string name="rnba">/r/NBA</string>
    <string name="points">%1$s points</string>
    <string name="noThreadFound">No thread found...</string>
    <string name="no_games_scheduled">No games scheduled</string>
    <string name="today">Today</string>
    <string name="yesterday">Yesterday</string>
    <string name="tomorrow">Tomorrow</string>
    <string name="retry">Retry</string>
    <string name="failed_game_data">Could not load game data</string>
    <string name="failed_standings_data">Could not load standings</string>
    <string name="failed_profile_data">Could not load user info</string>
    <string name="failed_comments_data">Could not load comments</string>
    <string name="mute_game">Mute this game</string>
    <string name="no_comments_found">No comments found</string>

    <!-- Strings for MainActivity -->
    <string name="action_refresh">Refresh</string>
    <string name="drawer_open">Drawer open</string>
    <string name="drawer_close">Drawer close</string>
    <string name="games_fragment_title">Games</string>
    <string name="standings_fragment_title">Standings</string>
    <string name="reddit_nba_fragment_title">/r/NBA</string>
    <string name="highlights_fragment_title">Highlights</string>
    <string name="today_string">Today</string>
    <string name="not_logged">Not logged In</string>

    <!-- Settings -->
    <string name="title_activity_submission">Settings</string>
    <string name="notifications">Notifications</string>
    <string name="theme">Theme</string>
    <string name="reddit">Reddit</string>
    <string name="log_out">Log out</string>
    <string name="log_in">Log in</string>
    <string name="click_login">Click to log in</string>
    <string name="logged_as_user">Logged in as %1$s</string>

    <string name="title_settings_cga">Close Game Alert</string>
    <string name="dialog_settings_cga">Pick teams to follow</string>
    <string name="summary_settings_cga">Receive an alert when a game is getting exciting towards the end</string>
    <!-- DO NOT TRANSLATE -->
    <string name="key_settings_cga">pref_cga_topics</string>

    <string name="title_settings_start">Game Starting</string>
    <string name="dialog_settings_start">Pick teams to receive alerts</string>
    <string name="summary_settings_start">Receive an alert when your favorite teams are about to play</string>
    <!-- DO NOT TRANSLATE -->
    <string name="key_settings_start">pref_start_topics</string>

    <string-array name="pref_teams_list_titles">
        <item>No team</item>
        <item>Atlanta</item>
        <item>Brooklyn</item>
        <item>Boston</item>
        <item>Charlotte</item>
        <item>Chicago</item>
        <item>Cleveland</item>
        <item>Dallas</item>
        <item>Denver</item>
        <item>Detroit</item>
        <item>Golden State</item>
        <item>Houston</item>
        <item>Indiana</item>
        <item>Los Angeles C</item>
        <item>Los Angeles L</item>
        <item>Memphis</item>
        <item>Miami</item>
        <item>Milwaukee</item>
        <item>Minnesota</item>
        <item>New Orleans</item>
        <item>New York</item>
        <item>Oklahoma City</item>
        <item>Orlando</item>
        <item>Philadelphia</item>
        <item>Phoenix</item>
        <item>Portland</item>
        <item>Sacramento</item>
        <item>San Antonio</item>
        <item>Toronto</item>
        <item>Utah</item>
        <item>Washington</item>
    </string-array>

    <!-- DO NOT TRANSLATE -->
    <string-array name="pref_teams_list_values">
        <item>noteam</item>
        <item>atl</item>
        <item>bkn</item>
        <item>bos</item>
        <item>cha</item>
        <item>chi</item>
        <item>cle</item>
        <item>dal</item>
        <item>den</item>
        <item>det</item>
        <item>gsw</item>
        <item>hou</item>
        <item>ind</item>
        <item>lac</item>
        <item>lal</item>
        <item>mem</item>
        <item>mia</item>
        <item>mil</item>
        <item>min</item>
        <item>nop</item>
        <item>nyk</item>
        <item>okc</item>
        <item>orl</item>
        <item>phi</item>
        <item>phx</item>
        <item>por</item>
        <item>sac</item>
        <item>sas</item>
        <item>tor</item>
        <item>uta</item>
        <item>was</item>
    </string-array>

    <string-array name="pref_cga_titles">
        <item>Atlanta</item>
        <item>Brooklyn</item>
        <item>Boston</item>
        <item>Charlotte</item>
        <item>Chicago</item>
        <item>Cleveland</item>
        <item>Dallas</item>
        <item>Denver</item>
        <item>Detroit</item>
        <item>Golden State</item>
        <item>Houston</item>
        <item>Indiana</item>
        <item>Los Angeles C</item>
        <item>Los Angeles L</item>
        <item>Memphis</item>
        <item>Miami</item>
        <item>Milwaukee</item>
        <item>Minnesota</item>
        <item>New Orleans</item>
        <item>New York</item>
        <item>Oklahoma City</item>
        <item>Orlando</item>
        <item>Philadelphia</item>
        <item>Phoenix</item>
        <item>Portland</item>
        <item>Sacramento</item>
        <item>San Antonio</item>
        <item>Toronto</item>
        <item>Utah</item>
        <item>Washington</item>
    </string-array>

    <!-- DO NOT TRANSLATE -->
    <string-array name="pref_cga_values">
        <item>CGA-Atlanta</item>
        <item>CGA-Brooklyn</item>
        <item>CGA-Boston</item>
        <item>CGA-Charlotte</item>
        <item>CGA-Chicago</item>
        <item>CGA-Cleveland</item>
        <item>CGA-Dallas</item>
        <item>CGA-Denver</item>
        <item>CGA-Detroit</item>
        <item>CGA-Golden-State</item>
        <item>CGA-Houston</item>
        <item>CGA-Indiana</item>
        <item>CGA-Los-Angeles-C</item>
        <item>CGA-Los-Angeles-L</item>
        <item>CGA-Memphis</item>
        <item>CGA-Miami</item>
        <item>CGA-Milwaukee</item>
        <item>CGA-Minnesota</item>
        <item>CGA-New-Orleans</item>
        <item>CGA-New-York</item>
        <item>CGA-Oklahoma-City</item>
        <item>CGA-Orlando</item>
        <item>CGA-Philadelphia</item>
        <item>CGA-Phoenix</item>
        <item>CGA-Portland</item>
        <item>CGA-Sacramento</item>
        <item>CGA-San-Antonio</item>
        <item>CGA-Toronto</item>
        <item>CGA-Utah</item>
        <item>CGA-Washington</item>
    </string-array>

    <!-- DO NOT TRANSLATE -->
    <string-array name="pref_cga_values_def">
        <item>CGA-Atlanta</item>
        <item>CGA-Brooklyn</item>
        <item>CGA-Boston</item>
        <item>CGA-Charlotte</item>
        <item>CGA-Chicago</item>
        <item>CGA-Cleveland</item>
        <item>CGA-Dallas</item>
        <item>CGA-Denver</item>
        <item>CGA-Detroit</item>
        <item>CGA-Golden-State</item>
        <item>CGA-Houston</item>
        <item>CGA-Indiana</item>
        <item>CGA-Los-Angeles-C</item>
        <item>CGA-Los-Angeles-L</item>
        <item>CGA-Memphis</item>
        <item>CGA-Miami</item>
        <item>CGA-Milwaukee</item>
        <item>CGA-Minnesota</item>
        <item>CGA-New-Orleans</item>
        <item>CGA-New-York</item>
        <item>CGA-Oklahoma-City</item>
        <item>CGA-Orlando</item>
        <item>CGA-Philadelphia</item>
        <item>CGA-Phoenix</item>
        <item>CGA-Portland</item>
        <item>CGA-Sacramento</item>
        <item>CGA-San-Antonio</item>
        <item>CGA-Toronto</item>
        <item>CGA-Utah</item>
        <item>CGA-Washington</item>
    </string-array>

    <!-- DO NOT TRANSLATE -->
    <string-array name="pref_start_titles">
        <item>Atlanta</item>
        <item>Brooklyn</item>
        <item>Boston</item>
        <item>Charlotte</item>
        <item>Chicago</item>
        <item>Cleveland</item>
        <item>Dallas</item>
        <item>Denver</item>
        <item>Detroit</item>
        <item>Golden State</item>
        <item>Houston</item>
        <item>Indiana</item>
        <item>Los Angeles C</item>
        <item>Los Angeles L</item>
        <item>Memphis</item>
        <item>Miami</item>
        <item>Milwaukee</item>
        <item>Minnesota</item>
        <item>New Orleans</item>
        <item>New York</item>
        <item>Oklahoma City</item>
        <item>Orlando</item>
        <item>Philadelphia</item>
        <item>Phoenix</item>
        <item>Portland</item>
        <item>Sacramento</item>
        <item>San Antonio</item>
        <item>Toronto</item>
        <item>Utah</item>
        <item>Washington</item>
    </string-array>

    <!-- DO NOT TRANSLATE -->
    <string-array name="pref_start_values">
        <item>Start-Atlanta</item>
        <item>Start-Brooklyn</item>
        <item>Start-Boston</item>
        <item>Start-Charlotte</item>
        <item>Start-Chicago</item>
        <item>Start-Cleveland</item>
        <item>Start-Dallas</item>
        <item>Start-Denver</item>
        <item>Start-Detroit</item>
        <item>Start-Golden-State</item>
        <item>Start-Houston</item>
        <item>Start-Indiana</item>
        <item>Start-Los-Angeles-C</item>
        <item>Start-Los-Angeles-L</item>
        <item>Start-Memphis</item>
        <item>Start-Miami</item>
        <item>Start-Milwaukee</item>
        <item>Start-Minnesota</item>
        <item>Start-New-Orleans</item>
        <item>Start-New-York</item>
        <item>Start-Oklahoma-City</item>
        <item>Start-Orlando</item>
        <item>Start-Philadelphia</item>
        <item>Start-Phoenix</item>
        <item>Start-Portland</item>
        <item>Start-Sacramento</item>
        <item>Start-San-Antonio</item>
        <item>Start-Toronto</item>
        <item>Start-Utah</item>
        <item>Start-Washington</item>
    </string-array>

    <!-- DO NOT TRANSLATE -->
    <string-array name="pref_start_values_def" />

</resources>
