<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">

    <PreferenceCategory
        android:title="General"
        android:key="general_category">

        <ListPreference
            android:defaultValue="noteam"
            android:entries="@array/pref_teams_list_titles"
            android:entryValues="@array/pref_teams_list_values"
            android:key="teams_list"
            android:negativeButtonText="@null"
            android:positiveButtonText="@null"
            android:title="Favorite Team" />

    </PreferenceCategory>

    <PreferenceCategory
        android:title="@string/notifications"
        android:key="notifications_category">

        <MultiSelectListPreference
            android:title="@string/title_settings_cga"
            android:dialogTitle="@string/dialog_settings_cga"
            android:summary="@string/summary_settings_cga"
            android:key="@string/key_settings_cga"
            android:entries="@array/pref_cga_titles"
            android:entryValues="@array/pref_cga_values"
            android:defaultValue="@array/pref_cga_values_def" />

        <MultiSelectListPreference
            android:title="@string/title_settings_start"
            android:dialogTitle="@string/dialog_settings_start"
            android:summary="@string/summary_settings_start"
            android:key="@string/key_settings_start"
            android:entries="@array/pref_start_titles"
            android:entryValues="@array/pref_start_values"
            android:defaultValue="@array/pref_start_values_def" />

    </PreferenceCategory>

    <PreferenceCategory
        android:title="@string/reddit"
        android:key="reddit_category">

        <Preference
            android:title="@string/log_out"
            android:key="log_in_status_pref"/>

    </PreferenceCategory>

</PreferenceScreen>
